// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search bar component Match Snapshot, cancelBtn and suggestions not false/empty 1`] = `
<div
  className="SearchBar"
  data-testid="searchBar"
>
  <input
    className="collapseSearch"
    id="search"
    onChange={[Function]}
    placeholder="Search..."
    type="search"
  />
  <button
    className="searchButton"
  >
    <ion-icon
      name="search-outline"
    />
  </button>
  <button
    className="cancelButton"
    style={
      Object {
        "visibility": "visible",
      }
    }
  >
    <ion-icon
      name="close-circle-outline"
    />
  </button>
</div>
`;

exports[`Search bar component Match Snapshot, cancelBtn and suggestions not showing 1`] = `
<div
  className="SearchBar"
  data-testid="searchBar"
>
  <input
    className="defaultSearch"
    id="search"
    onChange={[Function]}
    placeholder="Search..."
    type="search"
  />
  <button
    className="searchButton"
  >
    <ion-icon
      name="search-outline"
    />
  </button>
  <button
    className="cancelButton"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <ion-icon
      name="close-circle-outline"
    />
  </button>
</div>
`;
